--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MedTelPlus - Medical Alert, 911 Help Now, Tele-Medicine</title>
+    <title>
+      MedTelPlus - Offering the Most Reliable and Customizable Medical and
+      TeleCare Packages. Including Medical Alert Devices, 911 Help Now &TRADE;,
+      TeleCare, Telemedicine, Digital Doctors, Medical Emergency Alert Buttons
+    </title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
