--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       TeleCare, Telemedicine, Digital Doctors, Medical Emergency Alert Buttons
     </title>
     <base href="/" />
-
+    <meta name="google-site-verification" content="ev_vaZ-rOYN7SCqRBMFtpCvwRqhvKwAOOzkNlwSxUkg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
